# AndroidSerialLibrary

./: .gitignore  README.md  settings.gradle
androidserial/: CMakeLists.txt  build.gradle
androidserial/src/androidTest/java/com/attrsc/braincs/androidserial/: ExampleInstrumentedTest.java
androidserial/src/main/: AndroidManifest.xml
androidserial/src/main/java/android_serialport_api/: SerialPort.java  SerialPortFinder.java
androidserial/src/main/jni/: sercd.c
androidserial/src/main/res/values/: strings.xml
androidserial/src/test/java/com/attrsc/braincs/androidserial/: ExampleUnitTest.java
app/: build.gradle
app/src/androidTest/java/com/attrsc/braincs/androidseriallibrary/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/attrsc/braincs/androidseriallibrary/: Application.java  ConsoleActivity.java  LoopbackActivity.java  MainActivity.java  MainMenu.java  Sending01010101Activity.java  SerialPortActivity.java  SerialPortPreferences.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/attrsc/braincs/androidseriallibrary/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
